@@ -1,7 +1,7 @@
 
 // ep128emu -- portable Enterprise 128 emulator
 // Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
-// http://sourceforge.net/projects/ep128emu/
+// https://github.com/istvan-v/ep128emu/
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -125,6 +125,7 @@ namespace Ep128Emu {
     Buffer  buf;
     std::map< int, ChunkTypeHandler * > chunkTypeDB;
     void loadZXSnapshotFile(std::FILE *f, const char *fileName);
+    void loadCompressedFile(std::FILE *f);
    public:
     void addChunk(ChunkType type, const Buffer& buf_);
     void processAllChunks();
